Bug 1880043 - IMAP download progress status and localization improvement. r=mkmelin

The changes are described in bug 1880043 comment 8 and comment 9.

Differential Revision: https://phabricator.services.mozilla.com/D203652

--HG--
extra : amend_source : 94dbde277362898d46b88021533814aff6735f96